Added FileManager Files are saved as 64Bit String on DB!